# QSOLink-Client

./: .env.sample  .gitignore  Cargo.toml  MyFirstAvaloniaSolution.sln  README.md  TODO.md  go.mod  handlers.go  main.go
.cargo/: audit.toml
.github/workflows/: branch-protection.yml  ci.yml  copilot-review.yml
MyFirstAvaloniaSolution/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
docs/: AWARDS-TRACKING-DESIGN.md  BACKUP-RESTORE-DESIGN.md  CUSTOM-FIELDS-DESIGN.md  DOCKER-COMPOSE-DESIGN.md  DUPLICATE-DETECTION-DESIGN.md  EDIT-CONTACT-DESIGN.md  FCC-ULS-DESIGN.md  MULTI-USER-PROFILES-DESIGN.md  MULTI-USER-REMOTE-DB-DESIGN.md  QSO-MAP-DESIGN.md  STATISTICS-DASHBOARD-DESIGN.md  SYNC-DESIGN.md
qso/: models.go
src/: app.rs  db.rs  export.rs  lib.rs  lotw.rs  main.rs  models.rs  qrz.rs  remote_db.rs  rigctl.rs  security.rs
