[package]
name = "qsolog"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde-xml-rs = "0.8"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
dirs-next = "2.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
